Fix overflow"

--- a/src/modules/better-ui/styles/footer.css
+++ b/src/modules/better-ui/styles/footer.css
@@ -56,7 +56,6 @@
 
 
 .pageFrameView-content {
-    overflow: hidden;
     border-bottom-right-radius: 4px;
     border-bottom-left-radius: 4px;
 }
