--- a/src/modules/quick-send-supplies/styles.css
+++ b/src/modules/quick-send-supplies/styles.css
@@ -4,8 +4,8 @@
 
 .quickSendWrapper {
   position: absolute;
-  top: -65px;
-  left: 50%;
+  top: -50px;
+  left: 60px;
   z-index: 10;
   display: none;
   min-width: 130px;
